# duckdb-fdw

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  extension_config.cmake
.github/workflows/: linux-amd64-sanitized.yml
cmake/: DuckDBApiProductSources.cmake
connectors/github/: README.md  connector.yaml
connectors/rickandmorty/: README.md  connector.yaml
docs/: ARCHITECTURE.md  CONNECTOR_SPECIFICATIONS.md  PRODUCT_DELIVERY.md  RFC_PROCESS.md  RFC_TEMPLATE.md  RUNTIME_CONTRACTS.md  TEAM_TOPOLOGY.md
docs/goals/: body-signaled-rest-pagination.md  bounded-authenticated-repository-traversal.md  bounded-reactive-rate-limit-handling.md  bounded-runtime-admission-and-bulkheads.md  capability-scoped-authenticated-relation.md  community-installation.md  double-scalar-type.md  first-live-rest-relation.md  first-trustworthy-query.md  graphql-repository-analytics.md  live-rest-product-proof.md  predicate-selective-repository-scans.md  public-connector-authoring-candidate.md  repeatable-installation.md  scan-resilience-accounting.md  short-page-pagination.md  stable-local-connector-packages.md  static-api-key-credential.md  trustworthy-composed-remote-queries.md
docs/releases/: 0.1.0-notes.md  0.1.0.md  0.10.0-notes.md  0.16.0-notes.md  0.17.0-notes.md  0.18.0-notes.md  0.2.0-supply-chain.md  0.5.0-notes.md  0.6.0-notes.md  0.7.0-notes.md  0.8.0-notes.md  0.9.0-notes.md
docs/rfcs/: 0000-rfc-governance.md  0001-first-trustworthy-query-contract.md  0002-establish-production-design-practice.md  0003-define-native-scan-execution-boundary.md  0004-select-repeatable-installation-and-trust-path.md  0005-promote-live-rest-relation.md  0006-capability-scoped-authenticated-relation.md  0007-bound-authenticated-repository-pagination.md  0008-negotiate-selective-remote-predicates.md  0009-set-native-v1-boundary.md  0010-prove-conservative-relational-composition.md  0011-add-graphql-repository-analytics.md  0012-define-local-package-sql-registration.md  0013-define-connector-package-v1-contract.md  0014-adopt-release-support-and-backport-policy.md  0015-establish-package-ecosystem-and-trust-provenance-teams.md  0016-decide-body-signaled-rest-pagination.md  0017-relax-continuation-target-validation.md  0018-add-static-api-key-credential.md  0019-add-short-page-pagination.md  0020-add-double-scalar-type.md  0021-establish-scan-resilience-accounting.md  0022-add-list-of-scalar-array-output-columns.md  0023-add-durable-credential-providers.md  0024-enable-bounded-replay-safe-retry.md  0025-enable-bounded-reactive-rate-limit-handling.md  (+1 more)
docs/teams/: PACKAGE_ECOSYSTEM.md  (+6 more)
examples/: authenticated-repositories.sql  authenticated-user.sql  authenticated_repositories.py  authenticated_user.py  first-live-rest-relation.sql  first-trustworthy-query.sql  first_live_rest_relation.py  first_trustworthy_query.py  viewer-repository-metrics.sql  viewer_repository_metrics.py
experiments/live-rest-product-proof/: CMakeLists.txt  Makefile  README.md  RESULTS.md  extension_config.cmake
experiments/live-rest-product-proof/scripts/: run-live-rest-product-proof.sh
experiments/live-rest-product-proof/src/: curl_http_transport.cpp  http_scan_runtime.cpp  json_decoder.cpp  live_rest_extension.cpp  network_policy.cpp  plan.cpp  runtime_error.cpp
experiments/live-rest-product-proof/src/include/: live_rest_product_proof_extension.hpp
experiments/live-rest-product-proof/src/include/live_rest/: plan.hpp  runtime.hpp
experiments/live-rest-product-proof/src/include/live_rest/internal/: json_decoder.hpp  network_policy.hpp
experiments/live-rest-product-proof/test/: curl_identity.cpp  http_scan_runtime_tests.cpp  integration_failures.py  integration_success.py  json_decoder_tests.cpp  network_policy_tests.cpp  plan_tests.cpp
experiments/live-rest-product-proof/test/support/: __init__.py  http_service.py
experiments/native-extension/: CMakeLists.txt  Makefile  README.md  RESULTS.md  extension_config.cmake
experiments/native-extension/src/: fdw_boundary_probe_extension.cpp
experiments/native-extension/src/include/: fdw_boundary_probe_extension.hpp
experiments/native-extension/test/: cancellation.py
experiments/native-extension/test/sql/: fdw_boundary_probe.test
scripts/: check-native-format.sh  contract_freeze.py  native-dev.sh  read-release-pin.py  release-source-guard.sh  release_pins.py  reproduce-0.1-release.sh  rfc_evidence_authorities.py  run-0.1-release-gate.sh  run-installability-trial.sh  run-linux-sanitized-cell.sh  run-linux-sanitized.sh  run-native-extension-trial.sh  run-native-product-tests.sh  sanitizer-source-guard.sh  stage-ci-evidence.py  test-build-pin-binding.sh  test-ci-evidence-retention.sh  test-community-enablement.sh  test-native-dependencies.py  test-native-dev.sh  test-native-product-root-guard.sh  test-release-guards.sh  test-release-wrapper-root-guards.sh  test-sanitizer-source-guard.sh  validate-agent-assets.py  validate-agent-assets.rb  verify-0.1-evidence-set.py  verify-ci-evidence-roundtrip.py  verify-contract-freeze.py  verify-loadable-inventory.sh  verify-native-dependencies.py  verify-native-product-sources.py  verify-public-surface-inventory.py  verify-release-manifest.py  verify-rfc-0013-evidence.rb  verify-rfc-evidence.py  verify-sanitizer-flags.py  verify-sanitizer-manifest.py  verify-source-identities.py  (+4 more)
src/: README.md  authorization.cpp  connector.cpp  connector_catalog.cpp  connector_pagination.cpp  connector_resource_ceilings.cpp  curl_http_transport.cpp  curl_transfer.cpp  duckdb_api_adapter.cpp  duckdb_api_core.cpp  duckdb_api_extension.cpp  duckdb_secret.cpp  example_composition.cpp  execution_error.cpp  fixed_github_user_bearer_authenticator.cpp  fixture_decoder.cpp  fixture_runtime.cpp  http_chunk_decoder.cpp  http_paginated_scan.cpp  http_runtime.cpp  http_scan_executor.cpp  json_decoder.cpp  link_pagination.cpp  network_policy.cpp  product_composition.cpp  scan_plan.cpp  scan_planner.cpp  scan_request.cpp  scan_resource_accounting.cpp  uri_reference.cpp
(+924 files in other folders)
